<resources>
    <string name="app_name">AutoTradeApp</string>
    <!-- Strings related to login activity -->
    <string name="log_in">Log in</string>
    <string name="prompt_email">******</string>
    <string name="email">Email</string>
    <string name="prompt_password">******</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in">Sign In</string>
    <string name="password_recovery_fragment">Password recovery fragment</string>
    <string name="password_reset">Password reset</string>
    <string name="mobile_phone">Mobile number</string>
    <string name="prompt_mobile_phone">******</string>
    <string name="action_send_the_code">Send the code</string>
    <string name="action_log_in_short">log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_repeat">Repeat password</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to main activity -->
    <string name="balance">balance</string>
    <string name="strategies">strategies</string>
    <string name="stocks">stocks</string>

</resources>