<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#B3CDF4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".application.BotFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/balance_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:icon="@drawable/money"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/strategy_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strategies"
            android:icon="@drawable/target"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/stock_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stocks"
            android:icon="@drawable/bank"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/bot_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="bots"
            android:icon="@drawable/robot"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_window"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu"
        android:orientation="vertical">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_window"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>